--- a/Trianglequiz.css
+++ b/Trianglequiz.css
@@ -1,14 +1,14 @@
 .question-container{
     text-align: center;
     margin-top: 50px;
-    font-size: 16px;
+    font-size: 19px;
 }
 #submit-answer-btn{
     margin-left: 45%;
     margin-top: 40px;
     width: 180px;
     height: 50px;
-    background-color: rgb(81, 81, 201);
+    background-color:rgb(76, 133, 150) ;
     color: white;
     font-size: 18px;
     border-radius: 10px 10px 10px 10px;
@@ -25,14 +25,27 @@
     margin-right: 30px;
     font-size: 17px;
     color: white;
+    margin-top: 1.2%;
 }
 .header{
-    background-color:rgb(164, 98, 226);
-    height: 80px;
+    background-color:rgb(76, 133, 150);
+    height: 110px;
+    margin-top: 5px;
+    border-radius: 0px 0px 0px 20px;
+   
 }
 .son{
     font-family: "Work Sans", sans-serif;
     color: white;
     font-family: monospace;
-    padding-top: 0.7%;
+    padding-top: 0.9%;
+    margin-left: 2%;
+    font-size: 70;
+}
+.background{
+    background-image: url('light.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    opacity: 10;    
+
 }
