--- a/hp.css
+++ b/hp.css
@@ -3,36 +3,35 @@
     margin-right: 30px;
     font-size: 17px;
     color: white;
+    margin-top: 1.2%;
 }
 .header{
-    background-color:rgb(164, 98, 226);
-    height: 80px;
+    background-color:rgb(76, 133, 150);
+    height: 110px;
+    margin-top: 5px;
+    border-radius: 0px 0px 0px 20px;
+   
 }
 .son{
     font-family: "Work Sans", sans-serif;
     color: white;
     font-family: monospace;
-    padding-top: 0.7%;
+    padding-top: 0.9%;
+    margin-left: 2%;
+    font-size: 70;
 }
-#non{
-    text-align: center;
-    color: blue;
-}
-/* .side-input{
-    margin-left: 43%;
-    margin-top: 20px;
-    width: 12%;
-    border-color: blue;
-} */
 #Hypotenuse-btn{
-        width: 250px;
-        height: 45px;
-        margin-top: 27px;
-        margin-left: 42%;
-        color: white;
-        background-color: rgb(103, 103, 223);
-        border-radius: 10px 10px 10px 10px;
-        font-size: 17px;
+    background:rgb(76, 133, 150);
+    border: none;
+    color: #fff;
+    padding: 0.7rem 1rem;
+    border-radius: 0.5rem;
+    font-size: large;
+    cursor: pointer;
+    outline: #fff;
+    margin: auto;
+    display: block;
+    margin-top: 2%;
        
 }
 
@@ -40,14 +39,38 @@
     text-align: center;
     margin-right: 1%;
     font-style: oblique;
-    font-size: 150%;
-    margin-top: 8%;
+    font-size: 200%;
+    margin-top: 4%;
+    color: rgb(76, 133, 150);
+    font-weight: bold;
+
+    
 }
 .side-input{
-    border-radius: 10px 10px 10px 10px;
-    padding-top: 2%;
-    margin-top: 7px;
-    margin-left: 43%;
-    border-color: rgb(76, 76, 214);
+    font-size: large;
+    display: block;
+    outline: #fff;
+    padding: 0.6rem 1rem;
+    margin: 1rem auto;
+    border: 2px solid rgb(76, 133, 150);
+    border-radius: 0.5rem;
+    width: 100%;
+    max-width: 325px;
+    color: rgb(17, 17, 16);
 }
+.background{
+    background-image: url('git.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    opacity: 10; 
+       
 
+}
+.cont{
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    text-align: center;
+    margin-left:24% ;
+
+}
